chore: migrated to java 23 + removed smells + added dummy actions